syntax = "proto3";

option go_package = "./api";

service User{
  rpc RegistrationUser(NewUserRequest) returns (UserResponse){}
  rpc AuthorizationUser(AuthorizationUserRequest) returns(UserResponse){}
  rpc GetUserById(UserRequest) returns (UserInfoResponse){}
  rpc GetSpecializeByUserId(UserRequest) returns(GetUserSpecializeResponse){}
  rpc SetImgUrl(SetImgUrlRequest) returns (SetImgUrlResponse){}
}

message NewUserRequest{
  string email = 1;
  string login = 2;
  string nameSurname = 3;
  string password = 4;
  string about = 5;
  repeated string specializes = 6;
  uint64 reqId = 7;
}

message UserResponse{
  uint64 id = 1;
  bool executor = 2;
}

message AuthorizationUserRequest{
  string email = 1;
  string password = 2;
  uint64 reqId = 3;
}


message UserRequest{
  uint64 id = 1;
  uint64 reqId = 2;
}

message UserInfoResponse{
  string email = 1;
  string login = 2;
  string nameSurname = 3;
  string about = 4;
  repeated string specializes = 5;
  bool executor = 6;
  string img = 7;
  int32 rating = 8;
}

message GetUserSpecializeResponse{
  repeated string specializes = 1;
}

message SetImgUrlRequest{
  uint64 id = 1;
  string imgIrl = 2;
  uint64 reqId = 3;
}

message SetImgUrlResponse{
  bool successfully = 1;
}